--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/process-deletions",
       "schedule": "0 2 * * *"
+    },
+    {
+      "path": "/api/cron/send-3day-follow-up-emails",
+      "schedule": "0 11 * * *"
     }
   ],
   "functions": {
@@ -10,6 +14,9 @@
       "maxDuration": 30
     },
     "app/api/cron/process-deletions/route.js": {
+      "maxDuration": 60
+    },
+    "app/api/cron/send-3day-follow-up-emails/route.js": {
       "maxDuration": 60
     }
   },
