--- a/package.json
+++ b/package.json
@@ -25,13 +25,9 @@
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.6.8",
     "crisp-sdk-web": "^1.0.22",
-    "dotenv": "^17.2.2",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
     "google-auth-library": "^10.3.0",
     "next": "^14.1.4",
-    "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^1.6.11",
     "nodemailer": "^6.9.13",
     "react": "18.2.0",
@@ -58,6 +54,10 @@
     "daisyui": "^5.3.10",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "dotenv": "^17.2.2",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "^16.0.0",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8.4.38",
     "supabase": "^2.51.0",
     "tailwindcss": "^4.1.16"
