--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "zod": "^4.1.8"
   },
   "devDependencies": {
-    "@eslint/css": "^0.13.0",
     "@eslint/js": "^9.38.0",
     "@eslint/json": "^0.13.2",
     "@eslint/markdown": "^7.5.0",
@@ -62,11 +61,13 @@
     "dotenv": "^17.2.2",
     "eslint": "^9.38.0",
     "eslint-config-next": "^16.0.0",
-    "eslint-plugin-tailwindcss": "^3.18.2",
     "globals": "^16.4.0",
     "jiti": "^2.6.1",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.4.38",
+    "stylelint": "^16.25.0",
+    "stylelint-config-standard": "^39.0.1",
+    "stylelint-config-tailwindcss": "^1.0.0",
     "supabase": "^2.51.0",
     "tailwindcss": "^4.1.16"
   },
