--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@headlessui/react": "^1.7.18",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.45.0",
+    "@tailwindcss/postcss": "^4.1.16",
     "@tanstack/react-query": "^5.86.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.6.8",
@@ -49,7 +50,7 @@
     "@next/bundle-analyzer": "^14.2.5",
     "@types/react": "19.1.12",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.10.1",
+    "daisyui": "^5.3.10",
     "dotenv": "^17.2.2",
     "eslint": "^9.38.0",
     "eslint-config-next": "^16.0.0",
@@ -60,7 +61,7 @@
     "stylelint": "^16.25.0",
     "stylelint-config-standard": "^39.0.1",
     "stylelint-config-tailwindcss": "^1.0.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.1.16",
     "typescript-eslint": "^8.46.2"
   }
 }
