--- a/package.json
+++ b/package.json
@@ -45,27 +45,28 @@
     "zod": "^4.1.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "@eslint/json": "^0.13.2",
-    "@eslint/markdown": "^7.5.0",
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
+    "@eslint/js": "^9.38.0",
+    "@eslint/json": "^0.13.2",
+    "@eslint/markdown": "^7.5.0",
     "@jest/globals": "^30.2.0",
     "@next/bundle-analyzer": "^14.2.5",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/react": "19.1.12",
     "autoprefixer": "^10.4.19",
     "babel-jest": "^30.2.0",
     "daisyui": "^5.3.10",
-    "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
     "dotenv": "^17.2.2",
     "eslint": "^9.38.0",
     "eslint-config-next": "^16.0.0",
     "globals": "^16.4.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jiti": "^2.6.1",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.4.38",
