fix: ensure husky is configured after npm install

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -25,6 +25,7 @@ tasks:
     interactive: true
     cmds:
       - cmd: npm install
+      - cmd: npm run prepare
       - cmd: test -f supabase/config.toml || npx supabase init
 
   setup:env:
