--- a/package.json
+++ b/package.json
@@ -19,15 +19,23 @@
     "test": "jest",
     "test:ci": "jest --ci --coverage --maxWorkers=2",
     "analyze": "ANALYZE=true next build",
-    "prepare": "husky"
+    "prepare": "husky",
+    "format": "prettier",
+    "format:write": "prettier --write"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
-      "prettier --write",
+      "prettier --write"
+    ],
+    "*.{test,spec}.{js,jsx,ts,tsx}": [
       "jest --bail --findRelatedTests"
     ],
-    "*.{json,css,md}": [
+    "*.css": [
+      "stylelint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
       "prettier --write"
     ]
   },
