--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@headlessui/react": "^1.7.18",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.45.0",
@@ -29,6 +30,7 @@
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
     "google-auth-library": "^10.3.0",
+    "gsap": "^3.13.0",
     "next": "^14.1.4",
     "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^1.6.11",
