fix: Update CodeQL config to ignore test files and ensure proper formatting

--- a/.github/codeql/codeql-config.yml
+++ b/.github/codeql/codeql-config.yml
@@ -1,4 +1,4 @@
-name: "ShareSkippy CodeQL Config"
+name: 'ShareSkippy CodeQL Config'
 
 paths-ignore:
   - 'node_modules'
@@ -11,3 +11,4 @@ paths-ignore:
   - '**/*.spec.tsx'
   - 'jest.config.ts'
   - 'jest.setup.js'
+  - '**/tests/*'
