--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,10 +1,10 @@
-name: "CodeQL Security Analysis"
+name: 'CodeQL Security Analysis'
 
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
-    branches: ["main"]
+    branches: ['main']
   schedule:
     - cron: '41 17 * * 1'
 
@@ -25,8 +25,10 @@ jobs:
         include:
           - language: javascript-typescript
             build-mode: none
+            config-file: ./.github/codeql/codeql-config-javascript.yml
           - language: actions
             build-mode: none
+            config-file: ./.github/codeql/codeql-config-actions.yml
 
     steps:
       - name: Checkout repository
@@ -49,9 +51,9 @@ jobs:
           languages: ${{ matrix.language }}
           build-mode: ${{ matrix.build-mode }}
           queries: security-extended,security-and-quality
-          config-file: ./.github/codeql/codeql-config.yml
+          config-file: ${{ matrix.config-file }}
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
         with:
-          category: "/language:${{ matrix.language }}"
+          category: '/language:${{ matrix.language }}'
