feat: Add Playwright for end-to-end testing and update package scripts
feat: Add Playwright configuration and workflows for end-to-end testing

feat: Add seed test data script to package.json

feat: Refactor user deletion and creation logic in seed script for improved error handling

feat: Add end-to-end test scripts for Playwright integration

feat: Update Playwright commands in package.json for consistency

feat: Update environment file references to use .env for consistency

feat: Integrate environment variable loading in server and proxy scripts

Add environment setting for e2e tests

feat: enhance Supabase client with cookie handling

--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --maxWorkers=2",
+    "test:e2e": "npm run seed:test && playwright test",
+    "test:e2e:ci": "npm run seed:test && playwright test --reporter=github",
     "analyze": "ANALYZE=true next build",
+    "playwright:install": "playwright install",
+    "seed:test": "ts-node-esm scripts/seed-test-data.ts",
     "prepare": "husky",
     "format": "prettier",
     "format:write": "prettier --write",
@@ -72,10 +76,12 @@
     "@eslint/json": "^0.14.0",
     "@eslint/markdown": "^7.5.0",
     "@jest/globals": "^30.2.0",
+    "@playwright/test": "^1.56.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.10.1",
     "@types/react": "19.2.7",
     "daisyui": "^5.5.14",
     "eslint": "^9.39.2",
@@ -95,7 +101,8 @@
     "stylelint-config-tailwindcss": "^1.0.0",
     "supabase": "^2.70.5",
     "tailwindcss": "^4.1.16",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "@playwright/test": "^1.56.0"
   },
   "babel": {
     "presets": [
