--- a/package.json
+++ b/package.json
@@ -45,42 +45,31 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.0",
-
     "@hookform/resolvers": "^5.2.2",
-   
-   
-
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.87.1",
-
     "@tailwindcss/postcss": "^4.1.16",
     "@tanstack/react-query": "^5.90.12",
     "@vercel/analytics": "^1.6.1",
     "crisp-sdk-web": "^1.0.22",
     "eslint-plugin-jest": "^29.2.1",
-
     "form-data": "^4.0.5",
     "google-auth-library": "^10.3.0",
     "lucide-react": "^0.554.0",
-   
-    "nodemailer": "^7.0.11",
-
     "next": "^16.0.10",
     "nextjs-toploader": "^3.9.17",
-
+    "nodemailer": "^7.0.11",
     "prop-types": "^15.8.1",
-    "react-icons": "^5.5.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
     "react-tooltip": "^5.26.3",
     "resend": "^4.0.1",
     "stripe": "^13.11.0",
-
     "ts-node": "^10.9.2",
     "yup": "^1.7.1",
-
-
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -97,15 +86,11 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/react": "19.2.7",
-
     "autoprefixer": "^10.4.22",
     "babel-jest": "^30.2.0",
     "baseline-browser-mapping": "^2.8.32",
     "daisyui": "^5.3.10",
     "dotenv": "^17.2.2",
-
-    "daisyui": "^5.5.13",
-
     "eslint": "^9.38.0",
     "eslint-config-next": "^16.0.8",
     "globals": "^16.4.0",
