--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "@tanstack/react-query": "^5.90.16",
     "@vercel/analytics": "^1.6.1",
     "crisp-sdk-web": "^1.0.27",
-    "eslint-plugin-jest": "^29.11.1",
     "next": "^16.1.1",
     "nextjs-toploader": "^3.9.17",
     "prop-types": "^15.8.1",
@@ -84,8 +83,10 @@
     "@types/node": "^24.10.1",
     "@types/react": "19.2.7",
     "daisyui": "^5.5.14",
+    "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
+    "eslint-plugin-jest": "^29.5.0",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
@@ -102,7 +103,6 @@
     "supabase": "^2.70.5",
     "tailwindcss": "^4.1.16",
     "ts-node": "^10.9.2",
-    "@playwright/test": "^1.56.0",
     "web-streams-polyfill": "^4.2.0"
   },
   "babel": {
