--- a/.github/workflows/pr-actions.yml
+++ b/.github/workflows/pr-actions.yml
@@ -6,6 +6,10 @@ permissions:
 on:
   pull_request:
     branches: ['main']
+  push:
+    branches: ['main']
+  merge_group:
+    branches: ['main']
 
 jobs:
   lint:
